--- a/Bank_loan_prediction.ipynb
+++ b/Bank_loan_prediction.ipynb
@@ -7,9 +7,9 @@
         "id": "Aw1kWJrathY3"
       },
       "source": [
-        "This assignment provides an opportunity to build an ANN model using the a bank marketing dataset\n",
+        "This project provides an opportunity to build an ANN model using a bank marketing dataset\n",
         "\n",
-        "https://www.kaggle.com/sriharipramod/bank-loan-classification\n",
+        "dataset repository - https://www.kaggle.com/sriharipramod/bank-loan-classification\n",
         "\n",
         "Target variable - personal loan - reflects whether a customer accepted a personal loan offer."
       ]
